--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.5.2
 Django==3.2.13
 django-allauth==0.41.0
+django-environ==0.8.1
+environ==1.0
 oauthlib==3.2.0
+Pillow==9.1.1
+psycopg2==2.9.3
 PyJWT==2.4.0
 python3-openid==3.2.0
 pytz==2022.1
