--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
 asgiref==3.5.2
+astroid==2.11.5
+dill==0.3.5.1
 Django==3.2.13
 django-allauth==0.41.0
+django-crispy-forms==1.14.0
 django-environ==0.8.1
 environ==1.0
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
 oauthlib==3.2.0
 Pillow==9.1.1
+platformdirs==2.5.2
 psycopg2==2.9.3
 PyJWT==2.4.0
+pylint==2.14.1
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
+tomli==2.0.1
+tomlkit==0.11.0
+typing_extensions==4.2.0
+wrapt==1.14.1
