--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 core.Microsoft*
 core.mongo*
 core.python*
-env.py
 __pycache__/
 *.py[cod]
 node_modules/
@@ -9,4 +8,4 @@ node_modules/
 cloudinary_python.txt
 *.sqlite3
 *pyc
-settings.py
+.env
