--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dill==0.3.5.1
 Django==3.2.13
 django-allauth==0.41.0
 django-crispy-forms==1.14.0
+django-dotenv==1.4.2
 django-environ==0.8.1
 environ==1.0
 isort==5.10.1
@@ -19,6 +20,7 @@ python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
+stripe==3.3.0
 tomli==2.0.1
 tomlkit==0.11.0
 typing_extensions==4.2.0
