--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.5.2
+boto3==1.24.31
+botocore==1.27.31
 dill==0.3.5.1
 Django==3.2.13
 django-allauth==0.41.0
@@ -6,8 +8,10 @@ django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-dotenv==1.4.2
 django-environ==0.8.1
+django-storages==1.12.3
 environ==1.0
 gunicorn==20.1.0
+jmespath==1.0.1
 mccabe==0.7.0
 oauthlib==3.2.0
 Pillow==9.1.1
@@ -17,6 +21,7 @@ pylint==2.14.1
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 sqlparse==0.4.2
 stripe==3.3.0
 tomlkit==0.11.0
