--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ Pillow==9.1.1
 psycopg2==2.9.3
 PyJWT==2.4.0
 pylint==2.14.1
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
